--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "air-schema-tree": "git+https://github.com/artifishional/air-schema-tree.git",
+    "animejs": "^3.0.1",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.4"
   }
